# reflectable

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: main.yml
include/reflectable/: JsonSerializer.hpp  Reflectable.hpp  TypeTraits.hpp
include/reflectable/impl/: SerializerCommon.hpp
src/: Reflectable.cpp
tests/: CMakeLists.txt  test_json_serializer.cpp  test_reflectable.cpp
